# webcore

./: .gitignore  .helmignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml
charts/webcore/: Chart.yaml  values.yaml
charts/webcore/templates/: _helpers.tpl  deployment.yaml  service.yaml
src/: lib.rs  main.rs  tls.rs
