[package]
name = "surevoucher_webcore"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Opinionated HTTP/TLS server for SureVoucher"
repository = "https://github.com/SureVoucher/webcore"

[[bin]]
name = "webcored"
path = "src/main.rs"

[features]
tls = ["rustls", "tokio-rustls", "rustls-pemfile", "tokio-stream"]

[dependencies]
once_cell = "1"
metrics-exporter-prometheus = "0.17"
axum = "0.8.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
anyhow = "1"

surevoucher_configcore = { git = "https://github.com/surevoucher/configcore.git", branch = "main" }

# TLS (optional)
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring"] }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2", optional = true }
tokio-stream = { version = "0.1", optional = true }
